k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: devops.urosjovanovic.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: frontend-service
          port:
            number: 80
